# basic_wear

./: README.md  db.sqlite3  manage.py  pyproject.toml
auth/: urls.py
basic_wear/: asgi.py  settings.py  urls.py  wsgi.py
basic_wear/apps/auth/: apps.py  views.py
basic_wear/apps/store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
store/: models.py
