[tool.poetry]
name = "basic-wear"
version = "0.1.0"
description = ""
authors = ["Eren Arıman <arimaneren@gmail.com>"]
readme = "README.md"
packages = [{include = "basic_wear"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
